Add php route to index

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "gulp --production",
     "zip": "gulp zip --production",
     "litmus": "gulp litmus --production",
-    "mail": "gulp mail --production"
+    "mail": "gulp mail --production",
+    "deploy": "gulp deploy --production"
   },
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
