--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "colors": "^1.1.2",
     "gulp": "4.0",
     "gulp-awspublish": "^3.0.1",
+    "gulp-clean": "^0.4.0",
     "gulp-cli": "^1.1.0",
     "gulp-html-src": "^1.0.0",
     "gulp-htmlmin": "^1.1.1",
@@ -53,10 +54,8 @@
     "yargs": "^4.1.0"
   },
   "babel": {
-    "presets": ["es2015"]
-  },
-  "bugs": {
-    "url": "https://github.com/evanszymkowicz/animation-email/issues"
-  },
-  "homepage": "https://github.com/evanszymkowicz/animation-email/dist/index.html"
+    "presets": [
+      "es2015"
+    ]
+  }
 }
